--- a/FrontEnd/src/Components/Auth/Auth.css
+++ b/FrontEnd/src/Components/Auth/Auth.css
@@ -4,7 +4,7 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background-image: url('../../assets/images/shiguang-zhao-i-vgADdh6E4-unsplash.jpg');
+  background-image: url('../../assets/images/natalia-y-DIewyzpUbRc-unsplash.jpg');
   background-position: center;
   background-size: cover;
 }
@@ -17,8 +17,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: white;
-  box-shadow: 0 0 100px 1px rgba(0, 0, 0, 0.589);
+  background-color: rgb(255, 254, 254);
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.589);
   
 }
 
@@ -30,7 +30,7 @@
   justify-content: center;
   margin-top: 40px;
   position: relative;
-  box-shadow: 0 0 20px 9px rgba(32, 32, 32, 0.233);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   border-radius: 30px;
 }
 
@@ -40,7 +40,7 @@
   outline: none;
   background: transparent;
   border: none;
-  color: black;
+  color: rgba(43, 43, 43, 0.836);
   z-index: 2;
   font-weight: 600;
 }
@@ -83,6 +83,7 @@
     border-bottom: 1px solid #d38312;
     margin: 10px 30px;
     outline: none;
+    border-radius: 2px;
 }
 
 .Auth-loginForm-ForgetPassword{
@@ -102,7 +103,7 @@
     background-color:#ff6600c9;
     color: rgba(255, 255, 255, 0.849);
     border-style: none;
-    box-shadow: 0px 0px 20px 2px #4e4e4ea9;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     border-radius: 20px;
     font-weight: 600;
     outline: none;  
@@ -131,9 +132,18 @@
         font-size: 35px;
 }
 
+.Auth-Icons:hover{
+  transform: translateY(-6px);
+  transition: all ease 0.2s;
+}
+
 .Validation{
   width: 300px;
   font-size: 14px;
   padding-left: 30px;
   color: red;
+}
+
+.Google-Login{
+  width: 10px;
 }
