--- a/FrontEnd/src/Components/Otp/Otp.css
+++ b/FrontEnd/src/Components/Otp/Otp.css
@@ -1,27 +1,33 @@
 .Otp-Container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 98vh;
-    width: 98vw;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../../assets/images/natalia-y-DIewyzpUbRc-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.Otp-Card {
+  width: 400px;
+  height: 50vh;
   
-  .Otp-Card {
-    width: 400px;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 0 20px 9px rgba(255, 117, 25, 0.11);
-  }
+  display: flex;
+  background-color: white;
+  border-radius: 8px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.589);
+}
 
-  .back-arrow{
-      position: relative;
-      transform: translateX(-180px) translateY(-150px);
-      font-size: 20px;
-  }
+.back-arrow {
+  position: absolute;
+  transform: translateX(-180px) translateY(-150px);
+  font-size: 20px;
+}
 
-  .back-arrow:hover{
-      color: chocolate;
-  }
+.back-arrow:hover {
+  color: chocolate;
+}
